2011-02-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17786: Filtering repository list fields are not prefixed with tablename
	* Follow-up to #17735: Class 'tx_em_XmlException' not found when Retrieve / Update

2011-02-26  Steffen Kamper  <steffen@typo3.org>

	* Added Feature #17723: Refreshment of about module

2011-02-26  Steffen Gebert  <steffen.gebert@typo3.org>

	* Fixed bug #17775: Compression Level Upgrade Wizard refers to old .htaccess path (Thanks to Markus Klein)

2011-02-25  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17772: Repository update deletes description of repository
	* Fixed bug #17769: Em use wrong property for db updates

2011-02-25  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17728: PHP warning in page module (e.g. in TemplaVoila) with active open_basedir
	* Fixed bug #17732: Install Tool doing Fatal error when APC PHP module is loaded (no session is stored)

2011-02-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #17761: htmlArea RTE: Defer access to stylesheets

2011-02-25  Stefan Galinski  <stefan.galinski@gmail.com>

	* Fixed bug #17431: "Show Page" in contextmenu results in new browser window (Thanks to Simon Schaufelberger)

2011-02-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16788: Flexform inputfields remain empty (Thanks to Andreas Kiessling)
	* Fixed bug #17735: Class 'tx_em_XmlException' not found when Retrieve / Update
	* Fixed bug #17692: Updating translations does not work anymore
	* Fixed bug #17758: EM: After update repository the info labels are not updated
	* Fixed bug #13309 Text on "Settings" tab needs more space
	* Fixed bug #13310: PHP Warning "array_merge(): Argument #2 is not an array" in class.tx_em_settings.php
	* Renewed fix #17701: Generated t3x are corrupted in 4.5.1-dev and trunk

2011-02-23  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17719: Move donation popup to about module (thanks to Steffen Kamper)
	* Follow-up to bug #17719: Removed unused files
